k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudphoenix
  labels:
    name: cloudphoenix
    managed-by: terraform
